--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ background-image:conic-gradient(at 60% 45%,red,yellow,green); */
           blue 270deg
         );
         background-blend-mode: soft-light;
-        opacity: transparent 0.3;
+        /* opacity:0.3; */
+        opacity: transparent;
       }
       p {
         display: flex;
@@ -51,6 +52,7 @@ background-image:conic-gradient(at 60% 45%,red,yellow,green); */
         font-size: medium;
         position: sticky;
         top: 0; /* The element becomes sticky at the top of its container */
+        
 
         /* z-index: 100;
         overflow: auto; */
